--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Elvis20-23.github.io/react02/",
+  "homepage": "https://elvis20-23.github.io/react02/",
   "name": "my-app1",
   "version": "0.1.0",
   "private": true,
